
[package]
authors = ["Yahaha <hilow6631@gmail.com>"]
edition = "2021"
name    = "network_interface"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"

  [dependencies.network-interface]
  branch = "main"
  git    = "https://github.com/hanskorg/network-interface.git"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
